feat: add getUserFollowings  api
